--- a/Libraries/EnigmatiKreations.Framework/EnigmatiKreations.Framework.Controls/Shared/Themes/Themes.xaml
+++ b/Libraries/EnigmatiKreations.Framework/EnigmatiKreations.Framework.Controls/Shared/Themes/Themes.xaml
@@ -9,33 +9,46 @@
 
     <!--  https://docs.microsoft.com/en-us/xamarin/xamarin-forms/user-interface/theming/theming  -->
 
-    <!--  Light colors  -->
-    <Color x:Key="LightPrimaryColor">WhiteSmoke</Color>
-    <Color x:Key="LightSecondaryColor">Black</Color>
-    <Color x:Key="LightTertiaryColor">DarkGray</Color>
 
-    <!--  Dark colors  -->
-    <Color x:Key="DarkPrimaryColor">Black</Color>
-    <Color x:Key="DarkSecondaryColor">WhiteSmoke</Color>
-    <Color x:Key="DarkTertiaryColor">#484848</Color>
+
+    <Style x:Key="BaseStyle" TargetType="Element">
+        <Setter Property="Shell.BackgroundColor" Value="{DynamicResource PrimaryColor}" />
+        <Setter Property="Shell.ForegroundColor" Value="{DynamicResource AccentColor}" />
+        <Setter Property="Shell.TitleColor" Value="{DynamicResource AccentColor}" />
+        <Setter Property="Shell.DisabledColor" Value="{DynamicResource TertiaryColor}" />
+        <Setter Property="Shell.UnselectedColor" Value="{DynamicResource TertiaryColor}" />
+        <Setter Property="Shell.TabBarBackgroundColor" Value="{DynamicResource PrimaryColor}" />
+        <Setter Property="Shell.TabBarForegroundColor" Value="{DynamicResource AccentColor}" />
+        <Setter Property="Shell.TabBarUnselectedColor" Value="{DynamicResource TertiaryColor}" />
+        <Setter Property="Shell.TabBarTitleColor" Value="{DynamicResource AccentColor}" />
+    </Style>
+
+    <Style BasedOn="{StaticResource BaseStyle}" TargetType="FlyoutItem" />
+    <Style BasedOn="{StaticResource BaseStyle}" TargetType="Tab" />
 
     <Style TargetType="Entry">
-        <Setter Property="PlaceholderColor" Value="{DynamicResource DarkTertiaryColor}" />
+        <Setter Property="PlaceholderColor" Value="{DynamicResource TertiaryColor}" />
         <Setter Property="FontSize" Value="16" />
-        <Setter Property="Background" Value="{AppThemeBinding Dark={DynamicResource DarkPrimaryColor}, Light={DynamicResource LightPrimaryColor}}" />
-        <Setter Property="TextColor" Value="{AppThemeBinding Dark={DynamicResource DarkSecondaryColor}, Light={DynamicResource LightSecondaryColor}}" />
+        <Setter Property="Background" Value="{DynamicResource PrimaryColor}" />
+        <Setter Property="TextColor" Value="{DynamicResource AccentColor}" />
         <Setter Property="Margin" Value="16" />
     </Style>
 
     <Style x:Key="RandomizerTitleLabel" TargetType="Label">
         <Setter Property="FontSize" Value="42" />
-        <Setter Property="TextColor" Value="{AppThemeBinding Dark={DynamicResource DarkSecondaryColor}, Light={DynamicResource LightSecondaryColor}}" />
+        <Setter Property="TextColor" Value="{DynamicResource AccentColor}" />
+        <Setter Property="Margin" Value="16" />
+    </Style>
+
+    <Style x:Key="RandomizerCardLabel" TargetType="Label">
+        <Setter Property="FontSize" Value="20" />
+        <Setter Property="TextColor" Value="{DynamicResource AccentColor}" />
         <Setter Property="Margin" Value="16" />
     </Style>
 
     <Style TargetType="Label">
         <Setter Property="FontSize" Value="24" />
-        <Setter Property="TextColor" Value="{AppThemeBinding Dark={DynamicResource DarkSecondaryColor}, Light={DynamicResource LightSecondaryColor}}" />
+        <Setter Property="TextColor" Value="{DynamicResource AccentColor}" />
         <Setter Property="Margin" Value="16" />
         <Setter Property="VerticalOptions" Value="Center" />
     </Style>
@@ -50,29 +63,27 @@
         x:Key="RandomizerListItemCardEven"
         BasedOn="{StaticResource RandomizerListItem}"
         TargetType="Frame">
-        <Setter Property="BackgroundColor" Value="#212121" />
+        <Setter Property="BackgroundColor" Value="{DynamicResource CardEvenColor}" />
     </Style>
 
     <Style
         x:Key="RandomizerListItemCardOdd"
         BasedOn="{StaticResource RandomizerListItem}"
         TargetType="Frame">
-        <Setter Property="BackgroundColor" Value="#484848" />
+        <Setter Property="BackgroundColor" Value="{DynamicResource TertiaryColor}" />
     </Style>
 
     <Style TargetType="Button">
-        <Setter Property="BorderWidth" Value="1" />
-        <Setter Property="Background" Value="{AppThemeBinding Dark={DynamicResource DarkPrimaryColor}, Light={DynamicResource LightPrimaryColor}}" />
-        <Setter Property="TextColor" Value="{AppThemeBinding Dark={DynamicResource DarkSecondaryColor}, Light={DynamicResource LightSecondaryColor}}" />
-        <Setter Property="BorderColor" Value="{AppThemeBinding Dark={DynamicResource DarkSecondaryColor}, Light={DynamicResource LightSecondaryColor}}" />
+        <Setter Property="Background" Value="{DynamicResource PrimaryColor}" />
+        <Setter Property="TextColor" Value="{DynamicResource AccentColor}" />
     </Style>
 
     <Style TargetType="ContentPage">
-        <Setter Property="BackgroundColor" Value="{AppThemeBinding Dark={DynamicResource DarkPrimaryColor}, Light={DynamicResource LightPrimaryColor}}" />
+        <Setter Property="BackgroundColor" Value="{DynamicResource PrimaryColor}" />
     </Style>
 
     <Style ApplyToDerivedTypes="True" TargetType="CheckBox">
-        <Setter Property="Color" Value="{AppThemeBinding Dark={DynamicResource LightPrimaryColor}, Light={DynamicResource DarkPrimaryColor}}" />
+        <Setter Property="Color" Value="{DynamicResource AccentColor}" />
     </Style>
 
 
