--- a/Libraries/Randomizer.Framework/Randomizer.Framework.Pages/ListEditionPage.xaml
+++ b/Libraries/Randomizer.Framework/Randomizer.Framework.Pages/ListEditionPage.xaml
@@ -9,7 +9,8 @@
     xmlns:converters="clr-namespace:EnigmatiKreations.Framework.Utils.Converters;assembly=EnigmatiKreations.Framework.Utils"
     xmlns:i18="clr-namespace:Randomizer.Framework.Services.Shared.Localization;assembly=Randomizer.Framework.Services"
     x:Name="this"
-    Title="{Binding Title}">
+    Title="{Binding Title}"
+    Background="{DynamicResource PrimaryColor}">
 
     <!--  ViewModel  -->
     <ContentPage.BindingContext>
@@ -51,7 +52,7 @@
 
     <!--  Page content  -->
     <ContentPage.Content>
-        <StackLayout Padding="16" BackgroundColor="#303030">
+        <StackLayout Padding="16" BackgroundColor="{DynamicResource TertiaryColor}">
 
             <Entry
                 FontSize="20"
@@ -73,7 +74,6 @@
                                 FontSize="30"
                                 HeightRequest="40"
                                 Text="{Binding Name}"
-                                TextColor="White"
                                 VerticalOptions="Center"
                                 VerticalTextAlignment="Center" />
                             <Image
@@ -95,12 +95,12 @@
                 x:Name="ItemEntry"
                 HorizontalOptions="StartAndExpand"
                 Placeholder="{i18:Translate ResourceKey=EnterAnItemPlaceholder}"
-                PlaceholderColor="WhiteSmoke"
+                PlaceholderColor="{DynamicResource TertiaryColor}"
                 ReturnCommand="{Binding AddItemCommand}"
                 ReturnCommandParameter="{Binding Source={x:Reference ItemEntry}, Path=Text}"
                 ReturnType="Next"
                 Text="{Binding ItemEntryText, Mode=TwoWay}"
-                TextColor="White">
+                TextColor="{DynamicResource AccentColor}">
                 <Entry.Keyboard>
                     <Keyboard x:FactoryMethod="Create">
                         <x:Arguments>
@@ -113,8 +113,7 @@
             <Button
                 Command="{Binding RandomizeCommand}"
                 HorizontalOptions="StartAndExpand"
-                Text="{i18:Translate ResourceKey=RandomizeLabel}"
-                TextColor="White" />
+                Text="{i18:Translate ResourceKey=RandomizeLabel}" />
 
         </StackLayout>
     </ContentPage.Content>
