--- a/Controls Gallery/ControlsGallery/ControlsGallery/MainPage.xaml
+++ b/Controls Gallery/ControlsGallery/ControlsGallery/MainPage.xaml
@@ -5,6 +5,12 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:controls="clr-namespace:EnigmatiKreations.Framework.Controls;assembly=EnigmatiKreations.Framework.Controls">
 
-    <Grid />
+    <Grid>
+        <CarouselView>
+            <Grid>
+                <Button Text="My Button" />
+            </Grid>
+        </CarouselView>
+    </Grid>
 
 </ContentPage>
