--- a/Controls Gallery/ControlsGallery/ControlsGallery/App.xaml
+++ b/Controls Gallery/ControlsGallery/ControlsGallery/App.xaml
@@ -1,8 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<Application xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="ControlsGallery.App">
+<Application
+    x:Class="ControlsGallery.App"
+    xmlns="http://xamarin.com/schemas/2014/forms"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:Controls="clr-namespace:EnigmatiKreations.Framework.Controls;assembly=EnigmatiKreations.Framework.Controls">
     <Application.Resources>
 
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <Controls:Themes />
+                <Controls:Templates />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+
+        <!--  Theme is set apart to identify it easily  -->
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <Controls:DarkTheme />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
